@@ -17,6 +17,6 @@
 }
 
 .tryxpath--focused-ancestor----f43c83f3-1920-4222-a721-0cc19c4ba9bf,
-.tryxpath--element----f43c83f3-1920-4222-a721-0cc19c4ba9bf..tryxpath--focused-ancestor----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
+.tryxpath--element----f43c83f3-1920-4222-a721-0cc19c4ba9bf.tryxpath--focused-ancestor----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
     outline: dashed thick rgb(255,255,0) !important;
 }
